--- a/templates/base/css/general.css
+++ b/templates/base/css/general.css
@@ -187,6 +187,9 @@ div.sys_main_logo .mainLogoText {
     letter-spacing:2px;
     text-shadow: 0px 1px 0px #ddd, 0px 2px 0px #aaa, 0px 1px 3px rgba(0, 17, 53, 0.9);
 }
+.mainLogo {
+    max-width: 100%;
+}
 
 /*+++ System Search Section +++*/
 
