#48 Button issue when multiple auths installed.

--- a/templates/base/login_join_form.html
+++ b/templates/base/login_join_form.html
@@ -1,6 +1,6 @@
 <div class="sys-form-__action__">
 	<bx_if:show_auth>
-		<div class="sys-auth clearfix">__auth__</div>
+		__auth__
 		<div class="bx-def-hr bx-def-margin-top"></div>
 	</bx_if:show_auth>
 	<div class="__action__-box-form">__custom_code_before____form____custom_code_after__</div>
