#95 Blogs: proper base url for mobile pages

--- a/templates/base/page_11.html
+++ b/templates/base/page_11.html
@@ -2,6 +2,7 @@
 <html>
 	<title>__page_header__</title>
    	<meta http-equiv="Content-Type" content="text/html; charset=__page_charset__" />
+    <base href="<bx_url_root />" />	
 	<bx_include_css />
 	<bx_include_js />
     <bx_injection:mobile_injection_head />
