#64 set avatar misalignment, stretched image in profile cover, out of bounds combo box in manage media objects

--- a/modules/boonex/avatar/templates/base/css/main.css
+++ b/modules/boonex/avatar/templates/base/css/main.css
@@ -62,6 +62,10 @@
     position:relative;
 }
 
+#bx_ava_crop_img_preview img {
+    max-width: none;
+}
+
 #bx_ava_crop_img_preview_cont {
     float:left;
 }
