--- a/templates/base/adminActionsPanel.html
+++ b/templates/base/adminActionsPanel.html
@@ -6,7 +6,7 @@
         </div>
     </bx_if:selectAll>
     <bx_if:actionButtons>
-        <div class="admin-actions-buttons bx-def-padding-left">
+        <div class="admin-actions-buttons bx-def-padding-left {class}">
             <bx_repeat:buttons>
                 <button class="bx-btn bx-btn-small" type="{type}" name="{name}" value="{value}" {onclick} >{value}</button>
             </bx_repeat:buttons>
