--- a/templates/base/profile_cover.html
+++ b/templates/base/profile_cover.html
@@ -10,7 +10,7 @@
 		<div class="sys-profile-cover-thumbnail">
 			<bx_if:show_thumbnail_image>
 				<a class="sys-pct-link" href="__thumbnail_href__">
-					<img class="sys-pct-image" src="__thumbnail__" />
+					<img class="sys-pct-image" src="__thumbnail__" src-2x="__thumbnail2x__" />
 				</a>
 			</bx_if:show_thumbnail_image>
 			<bx_if:show_thumbnail_letter_text><p class="sys-pct-letter">__letter__</p></bx_if:show_thumbnail_letter_text>
