--- a/templates/base/login_join_auth.html
+++ b/templates/base/login_join_auth.html
@@ -1,5 +1,7 @@
 <bx_repeat:buttons>
+<div class="sys-auth bx-def-margin-sec-top clearfix">
 	<a class="bx-btn" href="__href__"<bx_if:show_onclick> onclick="__onclick__"</bx_if:show_onclick>>
 		<bx_if:show_icon><i class="sys-icon __icon__"></i></bx_if:show_icon>__title__
 	</a>
+</div>
 </bx_repeat:buttons>
