--- a/modules/boonex/membership/templates/base/available_level.html
+++ b/modules/boonex/membership/templates/base/available_level.html
@@ -10,14 +10,12 @@
         	<div class="mbp-level-info bx-def-padding-thd-top">__description__</div>
         </bx_if:show_description>
         <div class="mbp-level-price bx-def-padding-thd-top">__price__ <span class="mbp-level-curr-code">__currency_code__</span></div>
-        <div class="mbp-level-control bx-def-padding-thd-top">
-        	<button type="button" class="bx-btn bx-btn-img bx-btn-ifont" onclick="javascript: __add_to_cart_js__;">
+        <div class="mbp-level-control">
+        	<button type="button" class="bx-btn bx-btn-small bx-btn-img bx-btn-ifont" onclick="javascript: __add_to_cart_js__;" title="<bx_text_attribute:_membership_txt_add_to_cart />">
         		<i class="sys-icon shopping-cart"></i>
-                <bx_text:_membership_txt_add_to_cart />
         	</button>
-            <button type="button" class="bx-btn bx-btn-img bx-btn-ifont" onclick="javascript: loadHtmlInPopup('explanation_popup', '__url_root__explanation.php?explain=membership&type=__id__');">
+            <button type="button" class="bx-btn bx-btn-small bx-btn-img bx-btn-ifont" onclick="javascript: loadHtmlInPopup('explanation_popup', '__url_root__explanation.php?explain=membership&type=__id__');" title="<bx_text_attribute:_membership_txt_explanation />">
                 <i class="sys-icon info-circle"></i>
-                <bx_text:_membership_txt_explanation />
             </button>
             <div class="mbp-cb">&nbsp;</div>
         </div>
