--- a/modules/boonex/membership/templates/base/available_level.html
+++ b/modules/boonex/membership/templates/base/available_level.html
@@ -11,10 +11,10 @@
         </bx_if:show_description>
         <div class="mbp-level-price bx-def-padding-thd-top">__price__ <span class="mbp-level-curr-code">__currency_code__</span></div>
         <div class="mbp-level-control">
-        	<button type="button" class="bx-btn bx-btn-small bx-btn-img bx-btn-ifont" onclick="javascript: __add_to_cart_js__;" title="<bx_text_attribute:_membership_txt_add_to_cart />">
+        	<button type="button" class="bx-btn bx-btn-img bx-btn-ifont" onclick="javascript: __add_to_cart_js__;" title="<bx_text_attribute:_membership_txt_add_to_cart />">
         		<i class="sys-icon shopping-cart"></i>
         	</button>
-            <button type="button" class="bx-btn bx-btn-small bx-btn-img bx-btn-ifont" onclick="javascript: loadHtmlInPopup('explanation_popup', '__url_root__explanation.php?explain=membership&type=__id__');" title="<bx_text_attribute:_membership_txt_explanation />">
+            <button type="button" class="bx-btn bx-btn-img bx-btn-ifont" onclick="javascript: loadHtmlInPopup('explanation_popup', '__url_root__explanation.php?explain=membership&type=__id__');" title="<bx_text_attribute:_membership_txt_explanation />">
                 <i class="sys-icon info-circle"></i>
             </button>
             <div class="mbp-cb">&nbsp;</div>
