--- a/modules/boonex/membership/templates/base/select_level.html
+++ b/modules/boonex/membership/templates/base/select_level.html
@@ -13,7 +13,7 @@
         	<div class="mbp-level-info bx-def-padding-thd-top">__description__</div>
         </bx_if:show_description>
         <div class="mbp-level-price bx-def-padding-thd-top">__price__ <span class="mbp-level-curr-code">__currency_code__</span></div>
-        <div class="mbp-level-control bx-def-padding-thd-top">
+        <div class="mbp-level-control">
             <button type="button" class="bx-btn bx-btn-img bx-btn-ifont" onclick="javascript: loadHtmlInPopup('explanation_popup', '<bx_url_root />explanation.php?explain=membership&type=__id__');" title="<bx_text_attribute:_membership_txt_explanation />">
                 <i class="sys-icon info-circle"></i>
             </button>
