--- a/templates/base/form_input_wrapper.html
+++ b/templates/base/form_input_wrapper.html
@@ -1,2 +1,2 @@
-<div class="input_wrapper input_wrapper___type__ clearfix" __attrs__>__content__</div>
+<div class="input_wrapper input_wrapper___type__ __class__ clearfix" __attrs__>__content__</div>
 __content_add__
