--- a/templates/base/member_actions_list.html
+++ b/templates/base/member_actions_list.html
@@ -1,5 +1,5 @@
 <div class="actionsContainer">
-    <div class="actionsBlock">
+    <div class="actionsBlock clearfix">
     	<div class="actionItems clearfix"><bx_repeat:actions><div class="actionItem __action_link_class__">__action_link__</div></bx_repeat:actions></div>
         __responce_block__
     </div>
