--- a/templates/base/mail_box_compose_message.html
+++ b/templates/base/mail_box_compose_message.html
@@ -71,15 +71,15 @@
     		<textarea id="compose_message" class="story_edit_area"></textarea>
     	</div>
     	<div class="message_actions message_actions_compose">
-            <div class="message_actions_cnt bx-def-padding-sec">
+            <div class="message_actions_cnt bx-def-padding-sec clearfix">
         		<div class="messages_options">
-        			<label><input type="checkbox" id="to_mail"/>__send_copy_to__</label>
-        			<br />
-        			<label><input type="checkbox" id="to_my_mail"/>__send_copy_my__</label>
-        			<br />
+        			<label><input type="checkbox" id="to_mail"/>__send_copy_to__</label><br />
+        			<label><input type="checkbox" id="to_my_mail"/>__send_copy_my__</label><br />
         			<label><input type="checkbox" id="notify_mail"/>__notify__</label>
         		</div>
-                __compose_actions_buttons__
+        		<div class="messages_buttons">
+                	__compose_actions_buttons__
+                </div>
             </div>
         </div>
     </div>
