--- a/templates/base/mail_box_compose_message.html
+++ b/templates/base/mail_box_compose_message.html
@@ -27,15 +27,15 @@
 	{
 		var sPageUrl = this.sPageReceiver ;
 
-		// get nicknames list ;
-		$("#" + htmlSelectors[8]).autocomplete(sPageUrl + '&action=auto_complete', {
-			width: 260,
-			selectFirst: false
-		});	
-
-		// get member thumbnail ;
-        $("#" + htmlSelectors[8]).result(function(event, data, formatted) {
-			getHtmlData(htmlSelectors[9],  sPageUrl + '&action=get_thumbnail&recipient_id=' + encodeURIComponent(data));
+		$("#" + htmlSelectors[8]).autocomplete({
+            source: sPageUrl + '&action=auto_complete',
+            minLength: 1,
+            select: function(event, data) {
+                if (data.item) {
+                    $('#' + htmlSelectors[10]).val(data.item.id);
+    			    getHtmlData(htmlSelectors[9],  sPageUrl + '&action=get_thumbnail&recipient_id=' + encodeURIComponent(data.item.id));
+                }
+		    }
 		});
 	}
 
@@ -58,6 +58,7 @@
 	 					<div>__message_to__</div>
 	 					<div class="input_wrapper input_wrapper_text clearfix">
 	                    	<input type="text" value="__recipient_name__" id="message_recipient" class="form_input_text bx-def-font-inputs ac_input" />
+                            <input type="hidden" value="__recipient_id__" id="message_recipient_id" />
 	                    </div>
 	 					<div class="bx-def-padding-thd-top">__subject__ :</div>
 	  					<div class="input_wrapper input_wrapper_text clearfix">
