--- a/templates/base/page_150.html
+++ b/templates/base/page_150.html
@@ -5,8 +5,7 @@
     	<meta http-equiv="Content-Type" content="text/html; charset=__page_charset__" />
     	<meta http-equiv="Content-Style-Type" content="text/css" />
     	<bx_include_css />
-    	<script src="inc/js/functions.js" type="text/javascript" language="javascript"></script>
-        <script src="plugins/jquery/jquery.js" type="text/javascript" language="javascript"></script>
+    	<bx_include_js />
         <script defer type="text/javascript">
     		var site_url = '<bx_url_root />';
             setTimeout(function () {
