#111 "Invite friend" popup is too wide for mobile phone screen

--- a/templates/base/css/general_phone.css
+++ b/templates/base/css/general_phone.css
@@ -13,6 +13,7 @@
 	}
 
 	/*--- Login Join Form Section ---*/
+    div#bx_tellfriend div.login_ajax_wrap,
 	div#login_div div.login_ajax_wrap {
 	    width: 300px;
 	}
