--- a/modules/boonex/sites/templates/base/unit.html
+++ b/modules/boonex/sites/templates/base/unit.html
@@ -16,8 +16,6 @@
 
     <div class="bx_sites_unit_content bx-twig-unit-info">
 
-        __rate__
-
 	    <div class="bx_sites_unit_row bx-twig-unit-title">
 	        <div class="bx_sites_unit_title bx-def-font-h2">
 	            <a class="bx_sites_unit_title_link" href="__site_url__">__title__</a>
@@ -28,6 +26,10 @@
 	    <div class="bx-twig-unit-line bx-twig-unit-desc">
 	        <a href="__url__" class="bx-twig-unit-special" target="_blank">__url_title__</a>&nbsp;&mdash;&nbsp;__description__
 	    </div>
+
+        <div class="bx-twig-unit-line bx-twig-unit-rate">
+            __rate__
+        </div>
 
         <div class="bx-twig-unit-line bx-def-font-small bx-def-font-grayed">
             __date__ <span class="sys-bullet"></span> __comments__ <span class="sys-bullet"></span> __owner_str__ <a href="__owner_url__">__owner__</a>
