--- a/administration/templates/base/dashboard_charts.html
+++ b/administration/templates/base/dashboard_charts.html
@@ -42,7 +42,7 @@
 
 </script>
 
-<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script type="text/javascript" src="__proto__://www.google.com/jsapi"></script>
 <script>    
 
     google.load("visualization", "1", {packages:["corechart"]});
