--- a/modules/boonex/payment/templates/base/processed_orders.html
+++ b/modules/boonex/payment/templates/base/processed_orders.html
@@ -12,9 +12,7 @@
         </div>
         <div class="pmt-orders-order">
             <bx_if:pending>
-                <div class="input_wrapper input_wrapper_text bx-def-round-corners-with-border">
-                    <input type="text" name="order-data-__id__" class="form_input_text bx-def-font" value="__order__" />
-                </div>
+                <div class="input_wrapper input_wrapper_text bx-def-round-corners-with-border"><input type="text" name="order-data-__id__" class="form_input_text bx-def-font" value="__order__" /></div>
             </bx_if:pending>
             <bx_if:processed>__order__</bx_if:processed>
         </div>
