--- a/modules/boonex/payment/templates/base/css/orders.css
+++ b/modules/boonex/payment/templates/base/css/orders.css
@@ -143,12 +143,19 @@ div.pmt-orders-client{
     width: 150px;    
 }
 div.pmt-orders-order {
-    width: 150px;    
+    width: 200px;    
 }
 div.pmt-orders-order div.input_wrapper_text {
-    width: 130px;
+	position: relative;
+
+    width: 100%;
+	height: 24px;
     margin-top: 2px;
-    overflow:hidden;
+	margin-bottom: 2px;
+
+	text-indent: 0px;
+	line-height: normal;
+    overflow: hidden;
 }
 div.pmt-orders-amount{
     width: 80px;
