--- a/modules/boonex/membership/templates/base/css/levels.css
+++ b/modules/boonex/membership/templates/base/css/levels.css
@@ -83,9 +83,7 @@ div.mbp-level-description {
 }
 
 /*--- Select Level ---*/
-div.mbp-available-levels-wrp {
-	overflow: hidden;
-}
+div.mbp-available-levels-wrp, 
 div.mbp-available-levels {
 	position: relative;
 }
@@ -93,6 +91,12 @@ div.mbp-available-levels div.mbp-level {
 	position: relative;
 	display: inline-block;
 	width: 50%;
+}
+div.join-box-form {
+	margin-top: 20px;
+}
+div.join-box-form:first-child {
+	margin-top: 0px;
 }
 div.join-box-form div.mbp-available-levels div.mbp-level {
 	width: 100%;
