Ticket #172: Part1. Membership module improvements.

--- a/modules/boonex/membership/templates/base/css/levels.css
+++ b/modules/boonex/membership/templates/base/css/levels.css
@@ -105,5 +105,11 @@ div.mbp-sp-caption {
 	text-transform: uppercase;
 }
 div.mbp-pay .bx-btn {
+	display: inline-block;
+	float: none;
+
 	margin-left: 0px;
+}
+div.mbp-pay .bx-btn.mbp-select {
+	display: none;
 }
