--- a/modules/boonex/wall/templates/base/comments_actions.html
+++ b/modules/boonex/wall/templates/base/comments_actions.html
@@ -13,3 +13,7 @@
     <span class="sys-bullet"></span>
     __content__
 </bx_if:show_reply>
+<bx_if:show_vote>
+    <span class="sys-bullet"></span>
+    __content__
+</bx_if:show_vote>
