--- a/modules/boonex/wall/templates/base/css/view.css
+++ b/modules/boonex/wall/templates/base/css/view.css
@@ -349,6 +349,20 @@ div.wall-comments-post-cnt {
     display: none;
 }
 
+
+/*--- Voting Styles ---*/
+div.wall-post-voting {
+	display: inline-block;
+	vertical-align: top;
+}
+div.wall-post-voting-slider {
+	display: none;
+}
+b.wall-post-voting-count {
+	font-weight: normal;
+}
+
+
 /*--- Overwrite default Comment styles ---*/
 div.wall-event div.wall-comments{
     margin-top: 5px;
@@ -369,10 +383,13 @@ div.wall-event div.wall-comments span.wall-date,
 div.wall-event div.wall-comments a.cmt-replies-show,
 div.wall-event div.wall-comments a.cmt-replies-hide,
 div.wall-event div.wall-comments a.cmt-reply-toggle,
+div.wall-event div.wall-comments a.wall-post-voting-vote,
 div.wall-event div.wall-comments a.wall-delete {
     margin: 0px;
 	padding: 0px;
+
     text-transform: capitalize;
+	text-decoration: none;
 }
 div.wall-event div.wall-comments div.thumbnail_block {
     left: -38px;
