--- a/modules/boonex/files/templates/base/wall_post_comment.html
+++ b/modules/boonex/files/templates/base/wall_post_comment.html
@@ -10,8 +10,8 @@
         </div>
         <div class="wall-content bx_files-wall-content bx-def-margin-sec-bottom">__cnt_comment_text__</div>
         <div class="wall-snippet bx_files-wall-snippet">
-            <div class="wall-thumbnail bx_files-wall-thumbnail bx-def-shadow bx-def-round-corners bx-def-border bx-def-padding-sec">
-                <a href="__cnt_item_page__"><img src="__cnt_item_icon__" title="__cnt_item_title__" alt="__cnt_item_title__" /></a>
+            <div class="bx_files-wall-shp-wrapper bx-def-shadow bx-def-round-corners bx-def-border">
+                <a href="__cnt_item_page__"><img class="bx_files-wall-shp" src="<bx_image_url:spacer.gif />" title="__cnt_item_title__" style="width:__cnt_item_width__px; height:__cnt_item_height__px; background-image:url(__cnt_item_icon__);" /></a>
             </div>
             <div class="wall-info bx_files-wall-info bx-def-margin-sec-left">
                 <div class="wall-title bx_files-wall-title">
