--- a/templates/base/css/searchKeyword.css
+++ b/templates/base/css/searchKeyword.css
@@ -1,4 +1,3 @@
-
 .boxContent .votes_small {
 	float: none;
 	width: auto;
@@ -6,8 +5,14 @@
 .dbContent {
 	margin: 5px;
 }
-
 .searchContentBlock {
     margin: 5px auto;
 }
-
+.bx-btn-area {
+    text-align: center;
+}
+.bx-btn-area .bx-btn-centered {
+    margin: 0px 10px 10px 0px;
+    float: none;
+    display: inline;
+}
