--- a/templates/base/css/twig.css
+++ b/templates/base/css/twig.css
@@ -14,7 +14,7 @@
     top: 0px;
     left: 0px;
     width: 240px;
-    margin: 5px;
+    margin: 5px 10px 5px 5px;
 
     text-align: center;
     vertical-align: top;
