#204 Blogs: views counter

--- a/modules/boonex/blogs/templates/base/blogpost_unit.html
+++ b/modules/boonex/blogs/templates/base/blogpost_unit.html
@@ -19,6 +19,8 @@
             </span>
             <span class="sys-bullet"></span>
             <span class="unit_comments bx-def-font-small bx-def-font-grayed"><i class="sys-icon comments"></i> __comments_count__</span>
+            <span class="sys-bullet"></span>
+            <span class="unit_comments bx-def-font-small bx-def-font-grayed"><i class="sys-icon eye"></i> __views_count__</span>
         </div>
         </bx_if:full>
         __preview_picture__
