--- a/templates/base/extra_top_menu_items.html
+++ b/templates/base/extra_top_menu_items.html
@@ -8,7 +8,7 @@
 			</bx_if:menu_desc>
 		</div>
 		<bx_if:sub_menu>
-			<ul id="extra_menu_popup___menu_id__" class="extra_menu_popup">
+			<ul id="extra_menu_popup___menu_id__" class="extra_menu_popup extra_menu_popup___menu_name__">
 				<li>
 					<table class="popup" cellpadding="0" cellspacing="0">
 						<tbody>
