--- a/templates/base/login_join_form.html
+++ b/templates/base/login_join_form.html
@@ -1,4 +1,4 @@
-<div class="sys-form-__action__">
+<div class="sys-flj-content sys-form-__action__">
 	<bx_if:show_auth>
 		__auth__
 		<div class="bx-def-hr bx-def-margin-top"></div>
