--- a/administration/templates/base/mlevels_list.html
+++ b/administration/templates/base/mlevels_list.html
@@ -1,7 +1,7 @@
 <div id="adm-mlevels-cnt-levels" style="display:__display__;">
     <form id="adm-mlevels-list-form" enctype="multipart/form-data" method="post" action="__action__" class="form_advanced">
         <div class="adm-mlevels-items bx-def-bc-margin">
-            __results__
+            __result__
             <div class="adm-mlevels-item">
                 <b>
                     <bx_text:_adm_txt_mlevels_system />
