--- a/templates/base/css/common.css
+++ b/templates/base/css/common.css
@@ -1349,6 +1349,9 @@ div.navPanel .navPanelLinkPrev.sys-icon {
     margin-top:5px;
     margin-bottom:5px;
 }
+.rss_item_desc img {
+	max-width: 100%;
+}
 .rss_read_more {
     background-color:#EDEDED;
     height:30px;
