--- a/templates/base/download_box_unit.html
+++ b/templates/base/download_box_unit.html
@@ -1,4 +1,3 @@
-<div class="sys_download_unit bx-def-margin-sec-top" style="background-image:url(__icon__);">
-    <div><a href="__url__" href="__onclick__">__title__</a></div>
-    <p>__desc__</p>
+<div class="sys_download_unit bx-def-margin-sec-top-auto">
+    <div><a class="bx-btn" href="__url__" href="__onclick__"><i class="sys-icon __icon__"></i> __title__</a></div>
 </div>
