--- a/administration/templates/base/pbuilder_content.html
+++ b/administration/templates/base/pbuilder_content.html
@@ -62,4 +62,10 @@
     <bx_if:empty>
         __content__
     </bx_if:empty>
+    <bx_if:editor>
+    	<div id="__editor_id__Wrapper">
+		    <textarea id="__editor_id__"></textarea>
+		    __editor_code__
+		</div>
+	</bx_if:editor>
 </div>
