--- a/administration/templates/base/mp_members.html
+++ b/administration/templates/base/mp_members.html
@@ -2,6 +2,7 @@
 <form id="adm-mp-members-form" enctype="multipart/form-data" method="post" action="__action_url__" class="form_advanced" target="adm-mp-members-iframe">
     <input type="hidden" name="adm-mp-members-ctl-type" value="__ctl_type__" />
     <input type="hidden" name="adm-mp-members-view-type" value="__view_type__" />
+    <input type="hidden" name="adm-mp-members-ban-duration" value="0" />
     <bx_include_auto:designbox_top_controls.html />
     <div class="adm-mp-members-wrapper" id="adm-mp-members-simple" style="__style_simple__">__content_simple__</div>
     <div class="adm-mp-members-wrapper" id="adm-mp-members-extended" style="__style_extended__">__content_extended__</div>
