--- a/templates/base/css/default.css
+++ b/templates/base/css/default.css
@@ -2,6 +2,11 @@
 .bx-def-margin {
     margin:20px;
 }
+.bx-def-margin-lefttopright {
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-right: 20px;
+}
 .bx-def-margin-rightbottomleft {
     margin-right:20px;
     margin-bottom:20px;
@@ -41,6 +46,11 @@
 
 .bx-def-margin-sec {
     margin:10px;
+}
+.bx-def-margin-sec-lefttopright {
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
 }
 .bx-def-margin-sec-rightbottomleft {
     margin-right:10px;
@@ -82,6 +92,11 @@
 
 .bx-def-margin-thd {
     margin:5px;
+}
+.bx-def-margin-thd-lefttopright {
+    margin-left: 5px;
+    margin-top: 5px;
+    margin-right: 5px;
 }
 .bx-def-margin-thd-rightbottomleft {
     margin-right:5px;
@@ -125,6 +140,11 @@
 .bx-def-padding {
     padding:20px;
 }
+.bx-def-padding-lefttopright {
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-right: 20px;
+}
 .bx-def-padding-rightbottomleft {
     padding-right:20px;
     padding-bottom:20px;
@@ -154,6 +174,11 @@
 .bx-def-padding-sec {
     padding:10px;
 }
+.bx-def-padding-sec-lefttopright {
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
+}
 .bx-def-padding-sec-rightbottomleft {
     padding-right:10px;
     padding-bottom:10px;
@@ -182,6 +207,11 @@
 
 .bx-def-padding-thd {
     padding:5px;
+}
+.bx-def-padding-thd-lefttopright {
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-right: 5px;
 }
 .bx-def-padding-thd-rightbottomleft {
 	padding-right:5px;
