--- a/templates/base/css/subscription.css
+++ b/templates/base/css/subscription.css
@@ -13,7 +13,16 @@ div.sys-sbs-row button.bx-btn {
 	float: right;
 }
 
+/*--- Subscriptions Popup ---*/
 div#sbs_visitor_popup {
 	width: 490px;
     display: none;
+}
+div#sbs_visitor_popup .input_wrapper_input_set {
+	text-align: center;
+	white-space: normal;
+}
+div#sbs_visitor_popup .input_wrapper_input_set .bx-btn {
+	display: inline-block;
+	float: none;
 }
