--- a/modules/boonex/wall/templates/base/common_link.html
+++ b/modules/boonex/wall/templates/base/common_link.html
@@ -2,6 +2,11 @@
     <div class="wall-lnk-title bx-def-font-h2">
         <a href="__url__" target="_blank">__title__</a>
     </div>
+    <bx_if:show_thumnail>
+		<div class="wall-lnk-thumbnail bx-def-padding-sec">
+			<img class="bx-def-shadow bx-def-round-corners" src="__thumbnail__" />
+		</div>
+	</bx_if:show_thumnail>
     <div class="wall-lnk-url">
         <a href="__url__" target="_blank">__url__</a>
     </div>
