--- a/modules/boonex/wall/templates/base/post.html
+++ b/modules/boonex/wall/templates/base/post.html
@@ -8,7 +8,7 @@
     <div id="wall-ptype-cnt-photo" class="wall-ptype-cnt wall_photo">__post_wall_photo__</div>
     <!-- Post Video -->
     <div id="wall-ptype-cnt-video" class="wall-ptype-cnt wall_video">__post_wall_video__</div>
-    <!-- Post Music -->
-    <div id="wall-ptype-cnt-music" class="wall-ptype-cnt wall_music">__post_wall_music__</div>
+    <!-- Post Sound -->
+    <div id="wall-ptype-cnt-sound" class="wall-ptype-cnt wall_sound">__post_wall_sound__</div>
 	__post_js_content__
 </div>
